# datalang

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  shared.rs  syntax.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  syntax-validation.yml
dirctionary_tests/: Cargo.toml  README.md
dirctionary_tests/macro_definitions/: base.rs  social_media.rs
dirctionary_tests/src/: lib.rs
dirctionary_tests/tests/: base.rs  modular.rs  social_media.rs
dirctionary_tests/text_definitions/: base.txt  social_media.txt
examples/: basic_usage.rs  test_macro.rs
src/: lib.rs  shared.rs  types.rs
